--- a/module/config/default.conf
+++ b/module/config/default.conf
@@ -62,4 +62,8 @@ proxy - "Proxy":
 	http;socks4;socks5 type : "Protocol" = http
 	str username : "Username" = None
 	password password : "Password" = None
-    bool proxy : "Use Proxy" = False
+	bool proxy : "Use Proxy" = False
+reCAPTCHA - "reCAPTCHA":
+	str firefox_binary : "Path to Firefox binary" =
+	str geckodriver : "Path to geckodriver" = "geckodriver"
+	str uBlockOrigin : "Path to uBlock Origin firefox addon (signed)" =
